module-gateway/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ticketable-project
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
