module-gateway/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ticketable-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /game/(.*)
            pathType: Prefix
            backend:
              service:
                name: game
                port:
                  number: 80
          - path: /ticket/(.*)
            pathType: Prefix
            backend:
              service:
                name: ticket
                port:
                  number: 80
          - path: /waiting/(.*)
            pathType: Prefix
            backend:
              service:
                name: waiting
                port:
                  number: 80w
          - path: /auction/(.*)
            pathType: Prefix
            backend:
              service:
                name: auction
                port:
                  number: 80
